--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
-
-**/.classpath
-**/.settings
-**/.project
+/kshssc
+/.vscode
+/export
+__pycache__
+*.ogg
+*.ksh
